--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 400px;
-    margin: 0 auto;
+    margin: 0 10px;
     background-color: #76e1d1;
     padding: 0px 20px;
     border-radius: 1rem 0 1rem 0;
