--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
     background-color: #6bc2b5;
 }
 
@@ -12,7 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 400px;
-    margin: 0 10px;
+    margin: 0 auto;
     background-color: #76e1d1;
     padding: 0px 20px;
     border-radius: 1rem 0 1rem 0;
